# advent-of-code-2021

./: README.md  advent-of-code2021.cabal
app/: Main.hs
src/: Day1.hs  Day10.hs  Day11.hs  Day13.hs  Day2.hs  Day20.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Parser.hs
