cabal-version:      2.4
name:               advent-of-code2021
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Advent of Code 2021

-- A longer description of the package.
description: Haskell solutions to the 2021 Advent of Code

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Penny Chase
maintainer:         mpchase136@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md,
    README.md

library
    exposed-modules:  Day1

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        fmt,
        lens,
        megaparsec,
        text
    hs-source-dirs:   src
    default-language: Haskell2010

executable advent-of-code2021
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        advent-of-code2021

    hs-source-dirs:   app
    default-language: Haskell2010
